--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -1,1 +1,95 @@
 @import '@styles/base';
+
+.conHome {
+
+  .createButton {
+
+    button {
+      background-color: rebeccapurple;
+      height: 43px;
+      width: 100px;
+      margin-top: 12px;
+      margin-left: 12px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      color: white;
+      transition: transform 0.3s;
+    }
+
+    button:hover {
+      height: 43px;
+      width: 100px;
+      margin-top: 12px;
+      margin-left: 12px;
+      border: 1px solid;
+      border-radius: 10px;
+      color: black;
+      box-shadow: 5px 5px 10px rgba(0.5, 0, 0, 0.5);
+      transform: translateY(-2px);
+    }
+  }
+
+  .conGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .conCard {
+    overflow: hidden;
+    margin: 30px auto;
+    height: 200px;
+    width: 300px;
+    font-family: Poppins;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    position: relative;
+    transition: transform 0.3s;
+
+    .description {
+      overflow: hidden;
+      width: 300px;
+      height: 120px;
+      padding-bottom: 10px;
+    }
+
+    h6 {
+      border-bottom: 1px solid black;
+      font-size: 20px;
+      margin-top: 20px;
+      margin-bottom: 3px;
+    }
+
+    .deleteIconContainer {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+    }
+  }
+
+  .conCard:hover {
+    cursor: help;
+    margin: 30px auto;
+    height: 200px;
+    width: 300px;
+    font-family: Poppins;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(05, 0, 0, 0.5);
+    position: relative;
+    transform: translateY(-5px);
+  }
+
+  @media (max-width: 768px) {
+    .conGrid {
+      grid-template-columns: 1fr; // Pada layar kecil, satu kolom
+    }
+  }
+}
