feat(FSB3-21): Finish register login unresponsive

--- a/src/pages/Login/style.module.scss
+++ b/src/pages/Login/style.module.scss
@@ -64,14 +64,24 @@
       }
       .inputContainer {
         margin-top: 20px;
-        input {
+        .error {
+          color: red;
+          font-size: 15px;
+        }
+        .inputCont {
           margin-top: 15px;
-          width: 100%;
-          height: 36px;
-          border-radius: 5px;
-          border: 1px solid #e5e5e5;
-          background: #fff;
-          padding-left: 10px;
+          .error {
+            color: red;
+            font-size: 15px;
+          }
+          input {
+            width: 100%;
+            height: 36px;
+            border-radius: 5px;
+            border: 1px solid #e5e5e5;
+            background: #fff;
+            padding-left: 10px;
+          }
         }
       }
       .buttonContainer {
