--- a/src/pages/Register/style.module.scss
+++ b/src/pages/Register/style.module.scss
@@ -11,12 +11,19 @@
       margin-left: 100px;
     }
   }
+
   .imageContainer {
     padding-left: 50px;
     padding-top: 10px;
     width: 55%;
     height: 88.8vh;
     background: linear-gradient(151deg, #80d0ff 3.07%, #2498db 83.1%);
+    @include apply-at-xs-size {
+      display: none;
+    }
+    @include apply-at-xl-size {
+      display: block;
+    }
     .titleImage {
       color: #fff;
       font-size: 65px;
@@ -51,7 +58,24 @@
     align-items: center;
     justify-content: center;
     width: 45%;
+    @include apply-at-xs-size {
+      background: white;
+      width: 100vw;
+      height: 92vh;
+    }
+    @include apply-at-xl-size {
+      width: 45%;
+      height: 90vh;
+    }
     .container {
+      @include apply-at-xs-size {
+        background: white;
+        width: 70vw;
+        padding-top: 100px;
+      }
+      @include apply-at-xl-size {
+        width: 80%;
+      }
       .titleForm {
         text-align: center;
         .title {
