feat(FSB3-21): Add logout dropdown on navbar

--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -31,6 +31,10 @@
 
     .toolbar {
       @include directionX;
+      gap: 10px;
+      .profileIcon {
+        width: 35px;
+      }
       .theme {
         @include directionX;
         align-items: center;
